add tmux naviator to tmux and vim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,6 +71,9 @@ set-option -g status-left " #{session_name}  "
 # Set the status bar refresh interval
 set-option -g status-interval 1
 
+# Set the status poition to the top
+set-option -g status-position top
+
 # Set the right side of the status bar to show the current working directory of the active pane
 set-option -g status-right '#(tmux display-message -p "#{pane_current_path}")'
 # set-option -g status-right "#[fg=#1D9BF0]#[fg=#c0caf5] @jessarchercodes   #[fg=#ffffff] #[fg=#c0caf5]jessarcher   #[fg=#06B6D4]爵#[fg=#94A3B8]jessarcher.com "
@@ -92,6 +95,19 @@ set-option -g window-status-activity-style none
 set-option -g pane-active-border-style "fg=#1f2335"
 set-option -g pane-border-style "fg=#1f2335"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
 #--------------------------------------------------------------------------
 # Key Bindings
 #--------------------------------------------------------------------------
@@ -100,10 +116,10 @@ set-option -g pane-border-style "fg=#1f2335"
 # -n means that the bind doesn't use the prefix
 
 # Set the prefix to Ctrl+Space
-set -g prefix C-Space
+set -g prefix C-s
 
 # Send prefix to a nested tmux session by doubling the prefix
-bind C-Space send-prefix
+bind C-s send-prefix
 
 # 'PREFIX r' to reload of the config file
 unbind r
