--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,7 +19,7 @@ adjust_line_height 110%
 
 cursor_blink_interval 0
 enable_audio_bell 0
-hide_window_decorations yes
+# hide_window_decorations yes
 window_padding_width 10
 macos_titlebar_color #1f2335
 window_margin_width 0
